#92 Move public API related classes to the separate package